[gd_scene load_steps=35 format=3 uid="uid://dadt3djobs42d"]

[ext_resource type="Script" path="res://Scripts/Player/PlayerCharacter.gd" id="1_xuwv3"]
[ext_resource type="Texture2D" uid="uid://b4drgs376dp2l" path="res://Assets/Kings and Pigs/Sprites/01-King Human/Fall (78x58).png" id="2_dw661"]
[ext_resource type="Texture2D" uid="uid://cyjk7n5aurgli" path="res://Assets/Kings and Pigs/Sprites/01-King Human/Idle (78x58).png" id="2_x71p2"]
[ext_resource type="Texture2D" uid="uid://cl80se13hmwnx" path="res://Assets/Kings and Pigs/Sprites/01-King Human/Jump (78x58).png" id="4_v0pla"]
[ext_resource type="Texture2D" uid="uid://bc1gqv2f16f0e" path="res://Assets/Kings and Pigs/Sprites/01-King Human/Ground (78x58).png" id="4_vhkpx"]
[ext_resource type="Texture2D" uid="uid://c6b6qgvhqas6u" path="res://Assets/Kings and Pigs/Sprites/01-King Human/Run (78x58).png" id="6_l2m6e"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerJumpHandler.gd" id="7_04qp0"]
[ext_resource type="Script" path="res://Scripts/Player/PlayerAnimationHandler.gd" id="8_oju3h"]
[ext_resource type="Script" path="res://Scripts/NodeComponents/HealthComponent.gd" id="9_vtvc2"]
[ext_resource type="Script" path="res://Scripts/NodeComponents/LevelTransferDataHandler.gd" id="10_xx5bt"]
[ext_resource type="Resource" uid="uid://dm2jffdtxragw" path="res://Resources/Linkers/Player/PlayerData_Linker.tres" id="11_m5dlj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5sru0"]
atlas = ExtResource("2_x71p2")
region = Rect2(0, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiko0"]
atlas = ExtResource("2_x71p2")
region = Rect2(78, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtieb"]
atlas = ExtResource("2_x71p2")
region = Rect2(156, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_cj0lk"]
atlas = ExtResource("2_x71p2")
region = Rect2(234, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwf25"]
atlas = ExtResource("2_x71p2")
region = Rect2(312, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8apb"]
atlas = ExtResource("2_x71p2")
region = Rect2(390, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_36bmd"]
atlas = ExtResource("2_x71p2")
region = Rect2(468, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_82sro"]
atlas = ExtResource("2_x71p2")
region = Rect2(546, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_y435r"]
atlas = ExtResource("2_x71p2")
region = Rect2(624, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uve8"]
atlas = ExtResource("2_x71p2")
region = Rect2(702, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj5y8"]
atlas = ExtResource("2_x71p2")
region = Rect2(780, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwvmn"]
atlas = ExtResource("6_l2m6e")
region = Rect2(0, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hnir"]
atlas = ExtResource("6_l2m6e")
region = Rect2(78, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfk54"]
atlas = ExtResource("6_l2m6e")
region = Rect2(156, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhece"]
atlas = ExtResource("6_l2m6e")
region = Rect2(234, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y2gq"]
atlas = ExtResource("6_l2m6e")
region = Rect2(312, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8qhb"]
atlas = ExtResource("6_l2m6e")
region = Rect2(390, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_negxw"]
atlas = ExtResource("6_l2m6e")
region = Rect2(468, 0, 78, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_si0at"]
atlas = ExtResource("6_l2m6e")
region = Rect2(546, 0, 78, 58)

[sub_resource type="SpriteFrames" id="SpriteFrames_lvgaa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dw661")
}],
"loop": true,
"name": &"Falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.2,
"texture": SubResource("AtlasTexture_5sru0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiko0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtieb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cj0lk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwf25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8apb")
}, {
"duration": 0.7,
"texture": SubResource("AtlasTexture_36bmd")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_82sro")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_y435r")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_2uve8")
}, {
"duration": 0.8,
"texture": SubResource("AtlasTexture_uj5y8")
}],
"loop": true,
"name": &"Idle",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_v0pla")
}],
"loop": true,
"name": &"Jumping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_vhkpx")
}],
"loop": true,
"name": &"Landed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwvmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hnir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfk54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhece")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y2gq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8qhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_negxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si0at")
}],
"loop": true,
"name": &"Walking",
"speed": 11.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u2l8v"]
size = Vector2(13.5, 23)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hednp"]
particle_flag_disable_z = true
inherit_velocity_ratio = 1.0
direction = Vector3(0, -1, 0)
flatness = 0.136
gravity = Vector3(0, 0, 0)
linear_accel_max = 1.6
damping_max = 49.8
scale_min = 0.4

[sub_resource type="CanvasTexture" id="CanvasTexture_ftsik"]

[node name="PlayerCharacter" type="CharacterBody2D" node_paths=PackedStringArray("animation_handler")]
position = Vector2(0, -2)
collision_layer = 2
script = ExtResource("1_xuwv3")
animation_handler = NodePath("PlayerAnimationHandler")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
z_index = 1
position = Vector2(8, -15)
sprite_frames = SubResource("SpriteFrames_lvgaa")
animation = &"Jumping"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.25, -12.5)
shape = SubResource("RectangleShape2D_u2l8v")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-2, -15)
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="PlayerJumpHandler" type="Node" parent="." node_paths=PackedStringArray("player")]
unique_name_in_owner = true
script = ExtResource("7_04qp0")
player = NodePath("..")
jump_cut_multiplier = 0.78
falling_gravity_multiplier = 1.5
down_input_gravity_multiplier = 2.5
max_fall_speed = 350.0
max_down_fall_speed = 420.0

[node name="PlayerAnimationHandler" type="Node" parent="." node_paths=PackedStringArray("animated_sprite")]
unique_name_in_owner = true
script = ExtResource("8_oju3h")
animated_sprite = NodePath("../AnimatedSprite2D")
spriteXOffsetOnFlip = -15.5

[node name="HealthComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("9_vtvc2")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
visible = false
position = Vector2(-6, -1)
process_material = SubResource("ParticleProcessMaterial_hednp")
texture = SubResource("CanvasTexture_ftsik")
explosiveness = 0.75
interp_to_end = 0.11

[node name="LevelTransferDataHandler" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("10_xx5bt")
data_link = ExtResource("11_m5dlj")
